Tests/RunCMake/CMakePresets/InvalidVendor-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/InvalidVendor:
Error: @3,13: Invalid root object
  "vendor": true,
            \^$
